CI images update

--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-02 01:31:16
+lastsearch = 2024-08-02 02:25:06
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoqJERVxM3CQ-1o84MxgMGiyGzX7jpJ8YPcV2K6QPNKVuJAcoEsR
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = 18.9%%
+title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
+url = https://everon.online/products/bo-everon-sr04
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 16.7%%
-title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
-url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
+match = 26.3%%
+title = BỘ CHĂN GA GỐI NÉT YÊN BÌNH - EPM24061
+url = https://www.everonvni.vn/bo-chan-ga-goi-net-yen-binh-epm24061/
 
 [everonhanquoc.vn]
 match = 19.4%%
@@ -68,8 +68,8 @@ url = https://m.facebook.com/story.php/?story_fbid=430777606143789&id=1000763466
 
 [sieuthidemhanquoc.com.vn]
 match = 21.2%%
-title = Bộ chăn ga gối Everon EPM – 21063
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21063-1508
+title = Bộ chăn ga gối Everon EPM – 21061
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21061-1507
 
 [everonvn.com.vn]
 match = -47.4%%
