--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-02 01:28:51
+lastsearch = 2024-08-02 02:11:02
 
 [helloviettravel.com]
-match = -181.2%%
-title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
-url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
+match = -150.0%%
+title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
+url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = 12.5%%
+title = Bản tin Du lịch 18/7/2024
+url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -92,9 +92,9 @@ title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài
 url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
 
 [dulichviet.com.vn]
-match = -200.0%%
-title = Top 7 địa điểm du lịch Mỹ hấp dẫn tại thành phố Houston ...
-url = https://dulichviet.com.vn/tin-tuc/top-7-dia-diem-du-lich-my-hap-dan-tai-thanh-pho-houston-day-nang-dong
+match = -206.2%%
+title = Tour du lịch Miền Tây - Top 18 địa điểm hấp dẫn du khách ...
+url = https://dulichviet.com.vn/tin-tuc/tour-du-lich-mien-tay-top-18-dia-diem-hap-dan-du-khach-nhat
 
 [www.bestprice.vn]
 match = -212.5%%
