--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-08-01 22:20:52
+lastsearch = 2024-08-02 02:18:17
 
 [www.kymdan.com]
-match = 4.2%%
-title = Bộ ga trải giường Kymdan
-url = https://www.kymdan.com/danh-muc/drap-trai-giuong
+match = -333.3%%
+title = Kymdan
+url = https://www.kymdan.com/home.do?lang=en
 
 [thegioidemviet.vn]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
 url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
-match = 11.5%%
-title = bộ chăn ga everon ept24036
-url = https://yeshomebedding.com/bo-san-pham-everon-ept24036
+match = 18.5%%
+title = bộ sản phẩm everon epc24041
+url = https://yeshomebedding.com/bo-san-pham-everon-epc24041
 
 [www.lazada.vn]
 match = -15.6%%
@@ -37,9 +37,9 @@ title = Bộ Ga Kymdan Serenity kèm vỏ mền kích thước 160 x 200cm
 url = https://shopee.vn/Bộ-Ga-Kymdan-Serenity-kèm-vỏ-mền-kích-thước-160-x-200cm-i.191696919.24000449823
 
 [tiki.vn]
-match = -6.2%%
-title = Bộ grab giường có mền hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ grab giường có mền
+match = 0.0%%
+title = Bo ga niem co men hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bo ga niem co men
 
 [www.diepxuan.com]
 match = 100.0%%
