--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-01 20:30:11
+lastsearch = 2024-08-02 02:22:06
 
 [vinatools.com]
-match = -140.0%%
-title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/
+match = -206.7%%
+title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -186.7%%
-title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
-url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
+match = -160.0%%
+title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
+url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -315,4 +315,9 @@ url = https://dam-oclc.bac-lac.gc.ca/download?is_thesis=1&oclc_number=1252219531
 match = -186.7%%
 title = Công văn 978-CV/ĐU TP. HCM 2024 đẩy mạnh tuyên ...
 url = https://luatvietnam.vn/thong-tin/cong-van-978-cv-du-cua-dang-uy-so-giao-duc-va-dao-tao-thanh-pho-ho-chi-minh-ve-tiep-tuc-day-manh-tuyen-truyen-huong-dan-su-dung-tien-ich-tren-ung-dung-vneid-361725-d2.html
+
+[online.hvnh.edu.vn]
+match = -240.0%%
+title = Tra cứu thời khóa biểu - Thông báo chung - Học viện ngân hàng
+url = https://online.hvnh.edu.vn/public/tracuuthoikhoabieu
 
