--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-01 18:51:52
+lastsearch = 2024-08-02 02:21:45
 
 [www.zillow.com]
 match = -69.2%%
@@ -522,9 +522,9 @@ title = University System of Georgia
 url = https://www.usg.edu/
 
 [www.fns.usda.gov]
-match = -115.4%%
-title = Summer Meals for Kids Site Finder
-url = https://www.fns.usda.gov/summer/sitefinder
+match = 0.0%%
+title = SNAP Eligibility
+url = https://www.fns.usda.gov/snap/recipient/eligibility
 
 [sos.ga.gov]
 match = -323.1%%
