--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -22,9 +22,9 @@ title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
 url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
 match = -28.6%%
