--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -76,3 +76,8 @@ match = -27.6%%
 title = Chiếu điều hòa cao su non Tencel vàng đậm - Chăn ga gối đệm
 url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
+[www.nemuytin.com]
+match = -13.8%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+
