--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-01 23:45:16
+lastsearch = 2024-08-02 02:31:18
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -680,4 +680,9 @@ url = https://hanoionline.vn/di-lac-thi-di-lai-thoi-255481.htm
 match = -218.8%%
 title = Cát Tiên: Quyết liệt triển khai các biện pháp phòng, chống ...
 url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bien-phap-phong-chong-benh-sot-xuat-huyet-e201d52/
+
+[www.pnj.com.vn]
+match = -200.0%%
+title = Trang Sức Vàng: Vàng Trắng, Vàng Ý, Vàng 18K, 24K Cao ...
+url = https://www.pnj.com.vn/trang-suc-vang/
 
