--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-01 21:31:06
+lastsearch = 2024-08-02 02:36:30
 
 [thamaulac.com.vn]
-match = -88.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -22.2%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
-match = -138.9%%
-title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
-url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
+match = 22.2%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamvinhthuan.com]
 match = 16.7%%
@@ -22,9 +22,9 @@ title = Thảm xốp một màu 60cm x 60 cm
 url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
-match = -61.1%%
-title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
-url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
+match = -5.6%%
+title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
+url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
 
 [shopee.vn]
 match = -111.1%%
@@ -47,9 +47,9 @@ title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
 url = http://thamachau.vn/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam521
 
 [thamsami.com]
-match = -55.6%%
-title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
-url = http://thamsami.com/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam
+match = -94.4%%
+title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
+url = http://thamsami.com/san-pham/314/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam.html
 
 [thamht.vn]
 match = 27.8%%
