CI images update

--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-02 01:18:56
+lastsearch = 2024-08-02 02:48:53
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,9 +52,9 @@ title = Quy trình sản xuất chiếu trúc tre Việt Nam - Phổ Mến Thái
 url = https://www.youtube.com/watch?v=hOk5gnWzPhc
 
 [www.facebook.com]
-match = 8.3%%
-title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
-url = https://www.facebook.com/chieutructot/
+match = -95.8%%
+title = Tôi và Sứ quán ☑️ | Tôi gọi điện hỏi thủ tục làm mới hộ ...
+url = https://www.facebook.com/groups/toivasuquan/posts/tôi-gọi-điện-hỏi-thủ-tục-làm-mới-hộ-chiếu-tại-frankfurtđược-cho-biết-có-thể-làm-/2724268990956294/
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -207,9 +207,9 @@ title = VPF: Các Giải Bóng Đá Chuyên Nghiệp Việt Nam - V.League
 url = https://vpf.vn/mobile/
 
 [m.facebook.com]
-match = -37.5%%
-title = HR - TUYỂN DỤNG | CHI NHÁNH TƯ NHÂN CÓ BHXH
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8355035217853785/
+match = -100.0%%
+title = Tôi và Sứ quán ☑️ | Hello cả nhà. Mình xin chia sẻ kinh ...
+url = https://m.facebook.com/groups/toivasuquan/posts/2016049498444917/
 
 [thethao247.vn]
 match = -20.8%%
@@ -335,4 +335,19 @@ url = https://top10danang.com/top-10-dia-chi-ban-chieu-truc-da-nang-cao-cap-loai
 match = -83.3%%
 title = Giá Vàng Mi Hồng - Vàng Miếng, Trang Sức, Vàng Tây, Nhẫn ...
 url = https://giavangvietnam.com/gia-vang-mi-hong/
+
+[www.minhngoc.net.vn]
+match = -79.2%%
+title = Xổ số Minh Ngọc™ Kết Quả Xổ Số Trực Tiếp NHANH NHẤT
+url = https://www.minhngoc.net.vn/
+
+[www.vieclamtot.com]
+match = -66.7%%
+title = Việc Làm Bảo Vệ Ca Đêm Mới Nhất 2024 | Vieclamtot
+url = https://www.vieclamtot.com/tags/bao-ve-ca-dem
+
+[you.stonybrook.edu]
+match = -50.0%%
+title = Mini Essay 4 | Writing 303: A Personal Essay
+url = https://you.stonybrook.edu/wrt303/2015/12/01/miniessay4/
 
