--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-01 14:14:50
+lastsearch = 2024-08-02 02:44:00
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -62,9 +62,9 @@ title = Nhận biết - phân biệt: "Hạt lạc - Hạt đỗ". Lớp Nhà tr
 url = https://mngiaquat.longbien.edu.vn/hoat-dong-chuyen-mon-khoi-nha-tre/nhan-biet-phan-biet-hat-lac-hat-do-lop-nha-tre-d2/ctmb/9991/669168
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [quangharvest.com]
 match = -186.7%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -140.0%%
-title = Ways Station Gaming - "T hết tiền rồi ...
-url = https://m.facebook.com/waysstation/photos/t-hết-tiền-rồi-tối-nay-đừng-đi-bar-ra-net-nhé-cho-rẻ-t-chơi-pubg-còn-m-chơi-liên/1163379434092678/
+match = -200.0%%
+title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
+url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
 
 [www.youtube.com]
 match = -133.3%%
@@ -420,4 +420,9 @@ url = https://www.quansuvn.net/index.php?topic=25543.65;wap2
 match = -186.7%%
 title = Dây Chuyền Nam Vàng 610 Kim Thành.H | D2-610-14-3c319
 url = https://kimthanhh.com/day-chuyen-nam-vang-610-kim-thanhh-d2-610-14-3c319
+
+[moovitapp.com]
+match = -206.7%%
+title = Làm sao để đến Đường Nại Hiên Đông 14, Son Tra bằng ...
+url = https://moovitapp.com/index/vi/phương_tiện_công_cộng-Đường_Nại_Hiên_Đông_14-Da_Nang-street_19247609-6123
 
