--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-08-02 02:11:41
+lastsearch = 2024-08-02 02:45:04
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -17,9 +17,9 @@ title = NỆM CAO SU GOLDLATEX THẮNG LỢI
 url = https://khonemgiatot.vn/nem-cao-su-goldlatex-thang-loi
 
 [nemcaosuthangloi.vn]
-match = 22.7%%
-title = Nệm cao su thiên nhiên
-url = https://nemcaosuthangloi.vn/nem-cao-su-nem-cao-su-thien-nhien.html
+match = 36.7%%
+title = NỆM CAO SU HOẠT TÍNH THẮNG LỢI
+url = https://nemcaosuthangloi.vn/nem-cao-su-hoat-tinh-thang-loi.html
 
 [noithatdaithanh.vn]
 match = 36.7%%
@@ -67,8 +67,8 @@ title = NỆM CAO SU THIÊN NHIÊN THẮNG LỢI - NEM.VN
 url = https://nem.vn/nem-cao-su-thien-nhien-thang-loi
 
 [www.sieuthinem.vn]
-match = 30.0%%
-title = NỆM CAO SU NON THẮNG LỢI | GIẢM GIÁ 50 ...
+match = 26.7%%
+title = NỆM CAO SU NON THẮNG LỢI | GIẢM GIÁ 50%% ...
 url = https://www.sieuthinem.vn/nem-cao-su-non-thang-loi.html
 
 [nemhana.com]
