--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-01 23:58:58
+lastsearch = 2024-08-02 02:49:12
 
 [www.diepxuan.com]
 match = -131.2%%
@@ -12,9 +12,9 @@ title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [demxanh.com]
-match = -181.2%%
-title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
+match = -162.5%%
+title = Đệm bông ép 2m (2mx2m và 2mx2m2) giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
 
 [m.facebook.com]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = 2. 1. they made the fire in the traditional way 2. you must ...
 url = https://olm.vn/hoi-dap/tim-kiem?id=253432938837&q=2.+1.+they+made+the+fire+in+the+traditional+way+2.+you+must+collect+four+bottles+of+water+3.+Irving+Berlin+wrote+the+famous+song+"+While+Christmas"+4.+how+do+people+cook+this+kind+of+food?+5.+th...
 
 [shopee.vn]
-match = -206.2%%
-title = Túi Đựng Bút Hình Xe Tăng Sức Chứa Lớn Tiện Dụng Cho ...
-url = https://shopee.vn/Túi-Đựng-Bút-Hình-Xe-Tăng-Sức-Chứa-Lớn-Tiện-Dụng-Cho-Học-Sinh-i.600986218.23171442783
+match = -143.8%%
+title = Kính Mát pixel Phong Cách game minecraft Cho Bé
+url = https://shopee.vn/Kính-Mát-pixel-Phong-Cách-game-minecraft-Cho-Bé-i.600986218.22853593139
 
 [metric.vn]
 match = -206.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -200.0%%
-title = obessed with this 90’s brown lip duo by @Huda Beauty ...
-url = https://www.tiktok.com/@andrearomanofficial/video/7384118842538200353
+match = -181.2%%
+title = use my discount code AYASCHANNEL1 on @YesStyle ...
+url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
 
 [archiveofourown.org]
 match = -137.5%%
@@ -67,9 +67,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.facebook.com]
-match = -225.0%%
-title = Phụ Kiện Quà Tặng Hana Bình Dương - Túi xách lông stick ...
-url = https://www.facebook.com/photo.php?fbid=122125314410079971&id=61552399139360&set=a.122098393922079971&locale=ms_MY
+match = -143.8%%
+title = Tiếp tục những cung đường... #thixagiarai ...
+url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
 
 [archive.org]
 match = -193.8%%
