CI images update

--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-02 02:24:06
+lastsearch = 2024-08-02 03:14:01
 
 [www.reddit.com]
 match = -82.6%%
@@ -555,4 +555,9 @@ url = http://www.ibiblio.org/korean-war-cia-foia-releases/1952/DailyReports/1952
 match = -126.1%%
 title = Kim Jong-un 'suffering discomfort' after addiction to Swiss ...
 url = https://www.dailymail.co.uk/news/article-2770664/North-Korea-confirms-young-dictator-suffering-discomfort-addiction-Swiss-cheese-revealed.html
+
+[archive.org]
+match = -126.1%%
+title = Full text of "Journal Of The Indian Archipelago And Eastern ...
+url = https://archive.org/stream/in.ernet.dli.2015.533883/2015.533883.journal-of_djvu.txt
 
