--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-01 23:43:21
+lastsearch = 2024-08-02 03:28:14
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Ống Kính Pentax Thế giới máy ảnh số
 url = https://www.thegioimayanhso.vn/ong-kinh-pentax
 
 [www.vnphoto.net]
-match = -42.9%%
-title = Topic riêng dành cho dân chơi PENTAX [Archive] - Page 30
-url = http://www.vnphoto.net/forums/archive/index.php/t-16103-p-30.html
+match = -3.6%%
+title = Nên Chọn Pentax K7 Hay K5. [Archive]
+url = http://www.vnphoto.net/forums/archive/index.php/t-179152.html
 
 [nspp.mofa.gov.tw]
 match = -46.4%%
@@ -157,9 +157,9 @@ title = Tại sao cái *beep* gì cũng đổ lỗi tại Cộng Sản? - Tội 
 url = https://www.quyenduocbiet.com/a3405/tai-sao-cai-beep-gi-cung-do-loi-tai-cong-san-
 
 [www.tiktok.com]
-match = -420.0%%
-title = 90lo0
-url = https://www.tiktok.com/discover/90lo0?lang=en
+match = -25.0%%
+title = Maya Mayti Danon
+url = https://www.tiktok.com/discover/maya-mayti-danon?lang=en
 
 [fvoupsjn.mescoffee.com]
 match = -85.7%%
