--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-01 20:47:07
+lastsearch = 2024-08-02 03:17:12
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -19,7 +19,7 @@ url = https://nemgiakho.com/mua-nem-everon-180x200x15-gia-re-o-dau.html
 [everon.com.vn]
 match = 17.9%%
 title = Đệm Bông ép Extrafoam EVERON
-url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/?srsltid=AfmBOopgDwq7tNcNrrY8TqrqdzylNqIgP9c4V3ZD_iaHlBcE6zpBJuQM
+url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/
 
 [nemeveron.com.vn]
 match = 42.9%%
@@ -49,7 +49,7 @@ url = https://everon.online/products/vo-boc-dem-bong-ep-everon
 [everonvn.com.vn]
 match = 3.6%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOopAJ7fCzAM938GaR7j3fajAaE8Cw5NAKu8V3vF8cd3foNvrMeFi
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [demchinhhang.com]
 match = 12.9%%
