--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-02 00:33:21
+lastsearch = 2024-08-02 03:21:20
 
 [www.facebook.com]
-match = -45.0%%
-title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
-url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
+match = -75.0%%
+title = Vua Nệm - 🌼 SỞ HỮU BỘ CHĂN GA GẤM CAO CẤP ...
+url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-cao-cấp-pyeoda-tiết-kiệm-tới-66-vua-nệm-xả-kho-188-39-đồn/1462549323889165/
 
 [demxanh.com]
 match = -85.0%%
 title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html?srsltid=AfmBOoqqFWCBy1zTwyuMELoJDdeXrQlVAXsOrWJX7KoWU1BYDFHMXrgF
 
 [www.khodemthanhdo.com]
 match = 5.0%%
@@ -69,7 +69,7 @@ url = https://vuanem.com/brand/pyeoda
 [changagoidemphuongbac.com]
 match = -15.0%%
 title = Đệm cao su tổng hợp Dora Pyeoda
-url = https://changagoidemphuongbac.com/dem-cao-su-tong-hop-dora-pyeoda/
+url = https://changagoidemphuongbac.com/dem-cao-su-tong-hop-dora-pyeoda?yith_wcan=1&product_cat=ga-tra-giuong
 
 [changagoidemtamhao.com]
 match = -10.0%%
