--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-02 01:50:12
+lastsearch = 2024-08-02 03:30:58
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [tuananh.vn]
 match = 8.0%%
@@ -67,9 +67,9 @@ title = đệm tuấn anh
 url = https://www.demgiare.net/tag/dem-tuan-anh
 
 [sieuthidemonline.vn]
-match = -24.0%%
-title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
-url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
+match = -60.0%%
+title = Đệm Tuấn Anh - thương hiệu đệm hàng đầu tại Việt Nam!
+url = https://sieuthidemonline.vn/dem-tuan-anh/
 
 [www.youtube.com]
 match = -56.0%%
