CI images update

--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-01 20:14:47
+lastsearch = 2024-08-02 03:37:45
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCt4Envo&sig=ACfU3U0Q_LmSt_2WHsJ6szZT-7OSrBL0Yg&hl=en&sa=X&ved=2ahUKEwiN84D279OHAxWfDzQIHf8sIp8Q6AF6BAgqEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCt7Attl&sig=ACfU3U0t7rpWDyTngccCuJaLLEWZKpuawA&hl=en&sa=X&ved=2ahUKEwjp45_30tSHAxVSvokEHcuuB_IQ6AF6BAgfEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -95.2%%
+title = NEM Dubrovnik 2023, Day 2: record number of decision ...
+url = https://www.formatbiz.it/dettNews.aspx?id=10170
 
 [yro.slashdot.org]
 match = -114.3%%
