--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-01 21:51:25
+lastsearch = 2024-08-02 03:31:51
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOoogYmZpSQrLHIyBqh0rOFt0o3wXnkXXgTX0TEv9zLCRp5pRo-r9
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
 match = -85.7%%
@@ -122,9 +122,9 @@ title = giường gấp, giường xếp, giuong gap, giuong xep
 url = https://giuongxep.com/
 
 [www.lazada.vn]
-match = -23.8%%
-title = Thảm trải giường nỉ nhung hàng đẹp loại 1
-url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html?srsltid=AfmBOoo00WLSFvi0QNKZfJ8Fi_tFU9GSAmx0qnD54bwpkajWZEHwNFZ9
+match = -95.2%%
+title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
+url = https://www.lazada.vn/products/tham-chieu-da-nang-trai-san-trai-giuong-loai-mong-dung-4-mua-tam-trai-nem-mong-i1847998961.html
 
 [bvhungvuong.vn]
 match = -85.7%%
