--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-02 02:49:12
+lastsearch = 2024-08-02 03:35:58
 
 [www.diepxuan.com]
 match = -131.2%%
@@ -12,9 +12,9 @@ title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [demxanh.com]
-match = -162.5%%
-title = Đệm bông ép 2m (2mx2m và 2mx2m2) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
+match = -181.2%%
+title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
 
 [m.facebook.com]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -181.2%%
-title = use my discount code AYASCHANNEL1 on @YesStyle ...
-url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
+match = -200.0%%
+title = obessed with this 90’s brown lip duo by @Huda Beauty ...
+url = https://www.tiktok.com/@andrearomanofficial/video/7384118842538200353
 
 [archiveofourown.org]
 match = -137.5%%
