--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-01 23:46:40
+lastsearch = 2024-08-02 03:41:33
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
 url = https://songhong.info/chan-ga-goi-bc16
 
 [demxanh.com]
-match = -52.4%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
+match = -28.6%%
+title = Bộ ga gối chun chần xơ đậu nành mã 16 Lá tre voi
+url = https://demxanh.com/bo-ga-goi-chun-chan-xo-dau-nanh-ma-16-la-tre-voi.html
 
 [foreverbedding.net]
 match = -57.1%%
