--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-02 01:44:10
+lastsearch = 2024-08-02 03:40:13
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -40.0%%
-title = Đèn Trang Trí HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-trang-tri
+match = -46.7%%
+title = Đèn mắt ếch chiếu điểm HT 8094 10W
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
 
 [www.htlightlevel.vn]
-match = -233.3%%
-title = Đèn Pha LED 5054 - Công Ty Sản Xuất Đèn LED Chiếu Sáng ...
-url = https://www.htlightlevel.vn/den-pha-led-5054-10w/
+match = -146.7%%
+title = Đèn Rọi Ray 8019 10W Tay Trắng HT Light Level
+url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -67,9 +67,9 @@ title = Giống lúa TBR97 | Cứng cây - Chống chịu sâu bệnh tốt
 url = https://thaibinhseed.com.vn/vi-vn/san-pham/giong-lua/giong-lua-thuantbr97.aspx
 
 [www.dentrangtriht.com]
-match = -220.0%%
-title = Đèn cắm cỏ đèn chiếu cây công suất 10w ánh sáng ... - HT Light
-url = https://www.dentrangtriht.com/san-pham/den-cam-co-den-chieu-cay-cong-suat-10w-anh-sang-vang-chuyen-trang-tri-san-vuon-cay-xanh-hang-ngoai-troi-chong-nuoc/
+match = -106.7%%
+title = HT Light - Đèn trang trí số 1 Việt Nam
+url = https://www.dentrangtriht.com/
 
 [phutungotovietyen.com]
 match = -13.3%%
