--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-02 01:57:24
+lastsearch = 2024-08-02 03:38:09
 
 [hoa18.com]
 match = -84.2%%
-title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
-url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -89.5%%
+title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
+url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
 
 [kallos.co]
 match = -105.3%%
@@ -62,9 +62,9 @@ title = Olympic Paris 2024: Nguyễn Thùy Linh dừng bước đầy tiếc ...
 url = https://baomoi.com/olympic-paris-2024-nguyen-thuy-linh-dung-buoc-day-tiec-nuoi-c49778520.epi
 
 [www.tiktok.com]
-match = -168.4%%
-title = Người thật lòng thương Ngộ Không #tayhai #trendingvideo ...
-url = https://www.tiktok.com/@kenhtayhai/video/7394314360526556423
+match = -73.7%%
+title = Điều Hoà Bật 16 Độ Không Mát Ở Nhật Hitachi
+url = https://www.tiktok.com/discover/điều-hoà-bật-16-độ-không-mát-ở-nhật-hitachi
 
 [xlinhho.hagiang.gov.vn]
 match = -157.9%%
