--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-02 02:30:57
+lastsearch = 2024-08-02 03:35:17
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = -8.3%%
+title = Mai Thanh Hạ
+url = https://www.facebook.com/maithanhha19/
 
 [suckhoedoisong.vn]
 match = -225.0%%
