--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-02 00:18:04
+lastsearch = 2024-08-02 03:34:56
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -50.0%%
-title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng ...
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
+match = -20.8%%
+title = Chiếu trúc mắt nhỏ không viền màu trắng 140x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-140x190cm-15.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -27,9 +27,9 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 4.2%%
-title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+match = 25.0%%
+title = Chiếu Trúc Tre Việt Nam | Hanoi
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [shopee.vn]
 match = 50.0%%
@@ -57,9 +57,9 @@ title = Chia sẻ kiến thức, kinh nghiệm sử dụng chiếu trúc (tre)
 url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 
 [www.lazada.vn]
-match = 20.8%%
-title = [HCM]Chiếu trúc 0,8m x 19m đến 2m
-url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html
+match = -70.8%%
+title = Chiếu trúc/ chiếu tre 1m2*1m9 hàng Việt Nam cao cấp siêu ...
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-1m21m9-hang-viet-nam-cao-cap-sieu-re-chieu-khong-dung-vien-vai-ca-chieu-bang-hat-tre-i270848531.html
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
