--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-02 02:48:53
+lastsearch = 2024-08-02 03:32:53
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,9 +52,9 @@ title = Quy trình sản xuất chiếu trúc tre Việt Nam - Phổ Mến Thái
 url = https://www.youtube.com/watch?v=hOk5gnWzPhc
 
 [www.facebook.com]
-match = -95.8%%
-title = Tôi và Sứ quán ☑️ | Tôi gọi điện hỏi thủ tục làm mới hộ ...
-url = https://www.facebook.com/groups/toivasuquan/posts/tôi-gọi-điện-hỏi-thủ-tục-làm-mới-hộ-chiếu-tại-frankfurtđược-cho-biết-có-thể-làm-/2724268990956294/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/
 
 [chieutrucsaigon.com]
 match = 0.0%%
