--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-01 18:25:40
+lastsearch = 2024-08-02 03:42:53
 
 [shopee.vn]
-match = -32.0%%
-title = Mùng chụp tự bung khung gấp gọn thông minh cao cấp
-url = https://shopee.vn/Mùng-chụp-tự-bung-khung-gấp-gọn-thông-minh-cao-cấp-Màn-chụp-tự-bung-người-lớn-1m2-1m6-1m8-2m2-đỉnh-vuông-i.472489092.2973784523
+match = -40.0%%
+title = [LOẠI CÓ ĐÁY 1 CỬA] Mùng chụp đỉnh vuông viền chân ...
+url = https://shopee.vn/-LOẠI-CÓ-ĐÁY-1-CỬA-Mùng-chụp-đỉnh-vuông-viền-chân-cao-cấp-❤️FREESHIP❤️-Mùng-tự-bung-đỉnh-rộng-hàng-cao-cấp-i.159064454.2693183802
 
 [munghoangphat.com]
 match = -36.0%%
@@ -27,14 +27,14 @@ title = Màn chụp tự bung đỉnh vuông hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông
 
 [www.mantubung.com]
-match = -12.0%%
-title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
+match = -52.0%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [manthutrang.com]
-match = 16.0%%
-title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
-url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
+match = -40.0%%
+title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
+url = https://manthutrang.com/
 
 [www.diepxuan.com]
 match = 100.0%%
