--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-01 14:36:25
+lastsearch = 2024-08-02 03:42:13
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -87.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -82.6%%
+title = Kog'Maw means sweet potato in Korean (고구마). Any ...
+url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -635,4 +635,14 @@ url = https://www.chathamhouse.org/regions/americas/south-america
 match = 8.7%%
 title = From the Fulda Gap to Kuwait
 url = https://history.army.mil/html/books/070/70-56-1/cmhPub_70-56-1.pdf
+
+[m.facebook.com]
+match = -5.6%%
+title = Wallingford School
+url = https://m.facebook.com/wallingford4140/?locale=hu_HU
+
+[2009-2017.state.gov]
+match = -43.5%%
+title = MUTUAL LOGISTICS SUPPORT AGREEMENT (RP-US
+url = https://2009-2017.state.gov/documents/organization/132080.pdf
 
