--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-02 02:15:10
+lastsearch = 2024-08-02 03:39:33
 
 [shopee.vn]
 match = -216.7%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -116.7%%
-title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
-url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
+match = -250.0%%
+title = Thảm ghế nệm ghế mẫu mới loại 1m6,5 x55cm ... - Lazada
+url = https://www.lazada.vn/products/tham-ghe-nem-ghe-mau-moi-loai-1m65-x55cm-cac-mau-do-vang-i1526583829.html
 
 [vn.my-best.com]
 match = -233.3%%
@@ -190,4 +190,9 @@ url = https://hanahanadeco.com/products/tham-trai-ghe-sofa-mua-he-the-basic-han-
 match = 33.3%%
 title = Thảm phủ ghế sofa
 url = https://flexhouse.vn/tu-khoa-san-pham/tham-phu-ghe-sofa
+
+[cuahangtcs.com]
+match = -316.7%%
+title = Máy giặt cầm tay Xiaomi Deerma BY200 giặt sofa, thảm, ...
+url = https://cuahangtcs.com/products/may-giat-cam-tay-xiaomi-deerma-by200-giat-sofa-tham-nem
 
