CI images update

--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -131.6%%
-title = MƯA HÈ ♫ Tú Anh - Nhạc Thiếu Nhi Mùa Hè Vui Nhộn Cho ...
-url = https://www.youtube.com/watch?v=ZbNN7ZZ1YOk
+match = -157.9%%
+title = Chú Heo Lười, Khu Vui Chơi Thiếu Nhi - Nhạc Thiếu Nhi Vui ...
+url = https://www.youtube.com/watch?v=eN0W-tmCeX0
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOoqfgNBd__Cv3HRoGImKQAbV_aaTlQjDaLkrjKLGSp9Nie_cYr07
 
 [tiki.vn]
 match = -110.5%%
@@ -205,4 +205,9 @@ url = https://hoavang.danang.gov.vn/documents/10184/13543/116c4ed1f35a5d7730684a
 match = 42.1%%
 title = Chiếu cây HT thẳng 1m6 x 2m
 url = https://muathongminh.vn/chieu-cay-h-t-thang-1m6-x-2m-p.1__2505883070__63205544
+
+[vn.usembassy.gov]
+match = -105.3%%
+title = Gia hạn Hộ chiếu qua Đường Bưu điện hoặc Nộp nhanh
+url = https://vn.usembassy.gov/vi/renew-passports-by-postal-mail-or-express-drop-off/
 
