--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -181,3 +181,8 @@ match = 7.1%%
 title = RHODE ISLA HISTORY
 url = http://www.rihs.org/assetts/files/publications/1943_Jan.pdf
 
+[suongtuyet.com]
+match = -71.4%%
+title = Các Kích Thước Gối Chuẩn Hiện Nay
+url = https://suongtuyet.com/cac-kich-thuoc-goi-chuan-hien-nay.html
+
