--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-01 23:49:45
+lastsearch = 2024-08-02 03:52:39
 
 [en.wikipedia.org]
 match = -15.4%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -188.2%%
-title = Y1767C, a novel SCN5A mutation, induces a persistent Na ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3774256/
+match = -164.7%%
+title = Integrated Chinese and Western Medicine for Acute ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7053400/
 
 [books.google.com]
 match = -11.8%%
@@ -107,9 +107,9 @@ title = AASV Swine Information Library Catalog
 url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 
 [www.diepxuan.com]
-match = -5.9%%
-title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html
+match = -29.4%%
+title = Chăn KQ không sóng 5kg - Điệp Xuân
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [www.kvaser.cn]
 match = -5.9%%
@@ -285,4 +285,19 @@ url = https://www.mdpi.com/2306-7381/9/12/701
 match = -117.6%%
 title = Live Music | Culture at Mauna Lani, Hawaii
 url = https://aubergeresorts.com/maunalani/experiences/twilight-live-music-storytelling/
+
+[nap.nationalacademies.org]
+match = -170.6%%
+title = References | A Roadmap for Disclosure Avoidance in ...
+url = https://nap.nationalacademies.org/read/27169/chapter/13
+
+[link.springer.com]
+match = -176.5%%
+title = COVID-19 vaccine updates for people under different ...
+url = https://link.springer.com/article/10.1007/s11427-024-2643-1
+
+[www.thermofisher.com]
+match = -182.4%%
+title = CD11c Monoclonal Antibody (N418), PerCP-Cyanine5.5 ...
+url = https://www.thermofisher.com/antibody/product/CD11c-Antibody-clone-N418-Monoclonal/45-0114-82
 
