--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-07-01 21:12:38
 lastsearch = 2024-08-02 03:41:13
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = -33.3%%
+title = RUỘT CHĂN
+url = https://www.muji.com/vn/products/section/E30001
 
 [thegioidemviet.vn]
 match = -192.9%%
