--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-02 01:16:49
+lastsearch = 2024-08-02 03:56:29
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao bằng 1.4 X 1.95
 url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = 43.5%%
-title = Chiếu trúc cao bằng 1.4m x 1.95
-url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
+match = -56.5%%
+title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
+url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
 
 [lombom.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [khodem.vn]
 match = -56.5%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://baocaobang.vn/-3524.html
 
 [www.youtube.com]
-match = -108.7%%
-title = Miền Bắc mưa lớn kéo dài đến 2/8, ngập lụt còn tiếp diễn ...
-url = https://www.youtube.com/watch?v=gCKby5upOvg
+match = -104.3%%
+title = Tỷ phú giàu nhất châu Á muốn đầu tư vào thị trường Việt Nam ...
+url = https://www.youtube.com/watch?v=ThynQNPvg24
 
 [chieu.com.vn]
 match = -43.5%%
