--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-02 02:38:59
+lastsearch = 2024-08-02 03:54:04
 
 [www.youtube.com]
-match = -26.3%%
-title = cách trồng và chăm sóc cây mộc hương
-url = https://www.youtube.com/playlist?list=PLOR0hkahAaw2OD6ixcgagDZcwB5Jx3-Nd
+match = -147.4%%
+title = Kỹ thuật trồng mộc hương - loài cây siêu "đắt đỏ " | VTC16
+url = https://www.youtube.com/watch?v=q48GH4XH8uY
 
 [trangtrisanvuon.vn]
 match = -147.4%%
