--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-01 22:23:38
+lastsearch = 2024-08-02 03:47:52
 
 [shopee.vn]
-match = 35.3%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 0.0%%
+title = Set 5 món chiếu điều hòa cao su non kèm chăn thun lạnh ...
+url = https://shopee.vn/Set-5-món-chiếu-điều-hòa-cao-su-non-kèm-chăn-thun-lạnh-chiếu-cao-su-non-trần-tim-chun-cài-4-góc-kèm-chăn-trần-bông-i.217274735.15698688208
 
 [olbedding.com]
 match = 11.8%%
