--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-08-02 02:24:26
+lastsearch = 2024-08-02 03:44:06
 
 [dreamland.vn]
 match = -64.0%%
@@ -14,7 +14,7 @@ url = http://dreamland.vn/Cotton-lua-PT08-i4052.html
 [demxanh.com]
 match = 0.0%%
 title = Gối tựa Đệm Xanh giá rẻ tại Hà Nội
-url = https://demxanh.com/goi-tua-dem-xanh.html?srsltid=AfmBOorsfL7Rl-XHi9bdQI-GvvMX3FFtk6Ga7CoooPYDBO9Z8etqLr0y
+url = https://demxanh.com/goi-tua-dem-xanh.html
 
 [www.diepxuan.com]
 match = 48.0%%
