--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-02 02:26:03
+lastsearch = 2024-08-02 03:48:52
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOopt_xTlKjsC8P4HqUyZLGUwnSVNP5LnmQhLg0jhgWvFftxP6gUY
+match = 13.6%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [tiki.vn]
 match = -36.4%%
