--- a/images/tui-warmdream-140x190x09/config.ini
+++ b/images/tui-warmdream-140x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 lastopen = 2024-06-17 10:43:14
 
 [search]
-lastsearch = 2024-08-02 02:29:53
+lastsearch = 2024-08-02 03:57:54
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
+match = 10.5%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.youtube.com]
 match = -75.0%%
