CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-01 23:49:44
+lastsearch = 2024-08-02 04:15:58
 
 [silverwow.net]
 match = -255.6%%
@@ -354,7 +354,7 @@ url = https://profiles.ucsf.edu/jason.w.chan
 [shopee.sg]
 match = -188.9%%
 title = 88 Chan Kong Thye Chilli Paste 3kg
-url = https://shopee.sg/88-Chan-Kong-Thye-Chilli-Paste-3kg-i.273437342.5954728914?srsltid=AfmBOop76a1QPRDV5FX1we9fYM08F-n2uwwU5WcyMn4ttdC5FktwmKBn
+url = https://shopee.sg/88-Chan-Kong-Thye-Chilli-Paste-3kg-i.273437342.5954728914
 
 [www.aliexpress.com]
 match = -455.6%%
