--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-02 02:24:17
+lastsearch = 2024-08-02 04:17:41
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,14 +12,14 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = 37.0%%
+title = chăn tuyết thái lan sịn cao cấp
+url = https://shopee.vn/chăn-tuyết-thái-lan-sịn-cao-cấp-i.1126803410.22661927902
 
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOop4hedXxsv03o3-JCSdPgf39EX2fUGxphgvhMSdB0XauC5ZWDpL
 
 [tiki.vn]
 match = 11.1%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chăn nhung tuyết
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOopG_N4-W7_AjVQ-12cAEZnBhNUSAPIkxzxt-YGI5YxvgZJaWo2u
 
 [ninhouse.vn]
 match = 32.0%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -29.6%%
-title = CHÂN GÀ RÚT XƯƠNG SỐT THÁI mềm giòn đậm vị, ăn là ...
-url = https://www.youtube.com/watch?v=vZ2hBBqGbU4
+match = -66.7%%
+title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
+url = https://www.youtube.com/watch?v=XHN7YU5NYi4
 
 [baodaknong.vn]
 match = -7.4%%
@@ -154,7 +154,7 @@ url = https://dantri.com.vn/du-lich/khach-tay-thang-than-noi-ly-do-tai-sao-me-vi
 [www.facebook.com]
 match = -37.0%%
 title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/permalink.php/?story_fbid=436093618729320&id=100069860554625
+url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
 
 [stockbiz.vn]
 match = 18.5%%
