--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-02 03:40:13
+lastsearch = 2024-08-02 04:13:51
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Đèn mắt ếch chiếu điểm HT 8094 10W
 url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
 
 [www.htlightlevel.vn]
-match = -146.7%%
-title = Đèn Rọi Ray 8019 10W Tay Trắng HT Light Level
-url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
+match = -193.3%%
+title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
+url = https://www.htlightlevel.vn/den-roi-co-5w/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -67,9 +67,9 @@ title = Giống lúa TBR97 | Cứng cây - Chống chịu sâu bệnh tốt
 url = https://thaibinhseed.com.vn/vi-vn/san-pham/giong-lua/giong-lua-thuantbr97.aspx
 
 [www.dentrangtriht.com]
-match = -106.7%%
-title = HT Light - Đèn trang trí số 1 Việt Nam
-url = https://www.dentrangtriht.com/
+match = -220.0%%
+title = Đèn cắm cỏ đèn chiếu cây công suất 10w ánh sáng ... - HT Light
+url = https://www.dentrangtriht.com/san-pham/den-cam-co-den-chieu-cay-cong-suat-10w-anh-sang-vang-chuyen-trang-tri-san-vuon-cay-xanh-hang-ngoai-troi-chong-nuoc/
 
 [phutungotovietyen.com]
 match = -13.3%%
