--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-02 01:25:27
+lastsearch = 2024-08-02 04:24:56
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
+match = -193.3%%
+title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
+url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 12 - Điệp Xuân
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
@@ -315,4 +315,9 @@ url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-r
 match = -213.3%%
 title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
+
+[www.chieuduong.vn]
+match = 0.0%%
+title = Micro chính hãng
+url = https://www.chieuduong.vn/collections/micro-chinh-hang
 
