--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-02 02:22:06
+lastsearch = 2024-08-02 04:23:55
 
 [vinatools.com]
 match = -206.7%%
@@ -27,9 +27,9 @@ title = Bán đất Himlam Lương Định Của, P. An Khánh Q2, MT D2 ...
 url = https://batdongsan.com.vn/ban-dat-duong-d2-phuong-an-khanh/b-himlam-luong-dinh-cua-p-khh-q2-mt-16m-4x23-15-8ty-0906997966-pr34187773
 
 [m.facebook.com]
-match = -116.7%%
-title = Log in
-url = https://m.facebook.com/100044538125216/photos/1051811192980142/
+match = -213.3%%
+title = KTX ĐHQG TP.HCM | C nhận đơn bún cho buổi sáng mai 2/8
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2405807339799731/
 
 [www.expedia.com]
 match = -213.3%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -160.0%%
-title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
-url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
 
 [banhang.shopee.vn]
 match = -66.7%%
