--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-02 03:28:42
+lastsearch = 2024-08-02 04:21:10
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -637,9 +637,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [www.momo.vn]
-match = -43.8%%
-title = Lịch chiếu phim CGV Crescent Mall
-url = https://www.momo.vn/cinema/rap/cgv/cgv-crescent-mall-58
+match = -81.2%%
+title = Lịch chiếu phim CGV Aeon Mall Hải Phòng
+url = https://www.momo.vn/cinema/rap/cgv/cgv-aeon-mall-hai-phong-149
 
 [vneconomy.vn]
 match = -243.8%%
@@ -685,4 +685,14 @@ url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/AN KHAN
 match = -218.8%%
 title = Quốc lộ 16 sụt lún, công bố tình huống khẩn cấp về thiên tai
 url = https://vtv.vn/xa-hoi/quoc-lo-16-sut-lun-cong-bo-tinh-huong-khan-cap-ve-thien-tai-20240801013927889.htm
+
+[baotintuc.vn]
+match = -187.5%%
+title = Tâm lý lạc quan bao trùm các thị trường châu Á chiều 16/5
+url = https://baotintuc.vn/kinh-te/tam-ly-lac-quan-bao-trum-cac-thi-truong-chau-a-chieu-165-20240516163519541.htm
+
+[www.dkn.tv]
+match = -206.2%%
+title = Cô gái 16 tuổi mất trí nhớ đi lạc từ Sóc Trăng, được nhân ...
+url = https://www.dkn.tv/khac/co-gai-16-tuoi-mat-tri-nho-di-lac-tu-soc-trang-duoc-nhan-vien-benh-vien-o-sai-gon-cham-soc.html
 
