--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-02 03:42:53
+lastsearch = 2024-08-02 04:18:02
 
 [shopee.vn]
-match = -40.0%%
-title = [LOẠI CÓ ĐÁY 1 CỬA] Mùng chụp đỉnh vuông viền chân ...
-url = https://shopee.vn/-LOẠI-CÓ-ĐÁY-1-CỬA-Mùng-chụp-đỉnh-vuông-viền-chân-cao-cấp-❤️FREESHIP❤️-Mùng-tự-bung-đỉnh-rộng-hàng-cao-cấp-i.159064454.2693183802
+match = -12.0%%
+title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
 
 [munghoangphat.com]
-match = -36.0%%
-title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
-url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = Màn chụp tự bung đỉnh vuông hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông
 
 [www.mantubung.com]
-match = -52.0%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -12.0%%
+title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
+url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
 
 [manthutrang.com]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = 4.0%%
 title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?srsltid=AfmBOoq3bfqscbPf016szRNf97NVeQgDAO2vB565tYeppI9Uj99TCXCl
 
 [demxanh.com]
 match = 12.0%%
