--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-02 00:51:07
+lastsearch = 2024-08-02 04:26:19
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -60.0%%
+title = United States biological weapons program
+url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
 
 [www.facebook.com]
 match = -160.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -15.0%%
-title = Maddy Mcgraw Meet and Greet
-url = https://www.tiktok.com/discover/maddy-mcgraw-meet-and-greet
+match = -145.0%%
+title = Authentic Korean Street Food in Parramatta | Tteobokki & ...
+url = https://www.tiktok.com/@jensfoodfeed/video/7326417846177697025
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -115.0%%
-title = PM calls off press meeting amid clash over THAAD ...
-url = https://en.yna.co.kr/view/AEN20170907001800315
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = -145.0%%
@@ -420,4 +420,9 @@ url = https://sdcommunitypower.org/wp-content/uploads/2020/12/00.-Agenda-Packet-
 match = -25.0%%
 title = Manoel Galdino (@mgaldino) / X
 url = https://x.com/mgaldino
+
+[www.koreanwar2.org]
+match = -40.0%%
+title = HISTORICAL DIARY 3 - DECEMBER 1951
+url = https://www.koreanwar2.org/kwp2/usmc/003/M003_CD3_HISTORICAL_DIARY_DECEMBER_1951_3.pdf
 
