--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-01 21:31:58
+lastsearch = 2024-08-02 04:30:09
 
 [en.wikipedia.org]
-match = -12.5%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -120.0%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -125.0%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.akc.org]
 match = -45.0%%
