CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-02 04:27:42
+lastsearch = 2024-08-02 05:12:10
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnkfd5gU&sig=ACfU3U3xSwsDjY0oBNiGFiZXq1XrXK35Dw&hl=en&sa=X&ved=2ahUKEwj_ttH3wNSHAxWmD1kFHcsCGLAQ6AF6BAgpEAM
+match = -217.6%%
+title = The New Annual Army List, Militia List, and Yeomanry Cavalry ...
+url = https://books.google.com/books?id=py0dAQAAIAAJ&pg=PA25&lpg=PA25&dq=man+in+hoa+dep+16&source=bl&ots=wAgRm-ckdw&sig=ACfU3U3y1QqmKYVnVIONZEq64kNQCIf7FQ&hl=en&sa=X&ved=2ahUKEwjDg7iE6NSHAxVBIUQIHQjCLWsQ6AF6BAgZEAM
 
 [tax.vermont.gov]
 match = -29.4%%
