--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-02 04:38:56
+lastsearch = 2024-08-02 05:14:35
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -22,8 +22,8 @@ title = xem bảng xếp hạng anh-V5.7.7 - Đại học Ngân hàng TP.HCM
 url = http://hoidap.buh.edu.vn/xem bảng xếp hạng anh.aspx
 
 [vinif.org]
-match = -42.9%%
-title = Danh sách tài trợ dự án Khoa học và Công nghệ - VinIf
+match = 7.1%%
+title = Annual Project Archive - VinIf
 url = https://vinif.org/annual/
 
 [www.simonhoadalat.com]
