--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-02 03:29:46
+lastsearch = 2024-08-02 05:22:09
 
 [www.diepxuan.com]
 match = -20.0%%
-title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+title = Chiếu cây HT 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 7W HT Light Level
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -220.0%%
-title = Mức tham chiếu từ ngày 1.7.2025 khi chưa bỏ lương cơ sở ...
-url = https://www.youtube.com/watch?v=iBU19CVrcGk
+match = -226.7%%
+title = Cho Phép Tôi Được Nói Lỗ Lã Tôi Chịu, Nghe Muốn Rơi Lệ ...
+url = https://www.youtube.com/watch?v=ZXm1szzsxoU
 
 [dauthau.asia]
 match = -240.0%%
