--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-02 04:26:19
+lastsearch = 2024-08-02 05:24:35
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -60.0%%
-title = United States biological weapons program
-url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
+match = -21.4%%
+title = 12.12: The Day
+url = https://en.wikipedia.org/wiki/12.12:_The_Day
 
 [www.facebook.com]
 match = -160.0%%
@@ -402,9 +402,9 @@ title = Big Bad Bear (@BigBadBear_) / X
 url = https://twitter.com/bigbadbear_
 
 [www.hastingstribune.com]
-match = -30.0%%
-title = AP News Summary at 4:33 p.m. EDT
-url = https://www.hastingstribune.com/ap/health/ap-news-summary-at-4-33-p-m-edt/article_eafc99fd-024e-5a88-94f0-611efff9872a.html
+match = -130.0%%
+title = What you should know about Minnesota Gov. Tim Walz's ...
+url = https://www.hastingstribune.com/ap/agriculture/what-you-should-know-about-minnesota-gov-tim-walzs-record-in-office-amid-vp-speculation/article_20c9113d-2bb0-5cd1-82a4-890a32dc5a9e.html
 
 [www.cnn.com]
 match = -70.0%%
