--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-02 03:30:50
+lastsearch = 2024-08-02 05:13:53
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -336.4%%
-title = San Francisco Bay Area Running Race Calendar - 2024/25
-url = https://www.runguides.com/san-francisco/runs
+match = -227.3%%
+title = California Ultra Marathon Calendar 2024/25
+url = https://www.runguides.com/california/runs/ultra/all
 
 [www.kategridley.com]
 match = -125.0%%
