--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-02 03:31:51
+lastsearch = 2024-08-02 05:31:26
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOoroJmynA_UG9PcDM1zAygGtlMYu-M0vCa8dfRJ-K_t0P_rt2Uay
 
 [shopee.vn]
 match = -85.7%%
@@ -124,7 +124,7 @@ url = https://giuongxep.com/
 [www.lazada.vn]
 match = -95.2%%
 title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
-url = https://www.lazada.vn/products/tham-chieu-da-nang-trai-san-trai-giuong-loai-mong-dung-4-mua-tam-trai-nem-mong-i1847998961.html
+url = https://www.lazada.vn/products/tham-chieu-da-nang-trai-san-trai-giuong-loai-mong-dung-4-mua-tam-trai-nem-mong-i1847998961.html?srsltid=AfmBOorxFrazfz-6xldpjvOCa-FMAg-bB_PLmcya6YRi9WvRN9X9KiiD
 
 [bvhungvuong.vn]
 match = -85.7%%
