--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-01 18:53:22
+lastsearch = 2024-08-02 05:31:48
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -72,8 +72,8 @@ title = Danh hiệu đức Phật A Di Đà 14
 url = https://www.chuahoangphap.com.vn/play-video-danh-hieu-duc-phat-a-di-da-14-1/
 
 [vinif.org]
-match = -42.9%%
-title = Danh sách tài trợ dự án Khoa học và Công nghệ - VinIf
+match = 7.1%%
+title = Annual Project Archive - VinIf
 url = https://vinif.org/annual/
 
 [www.boehringerone.com]
