--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-02 02:33:23
+lastsearch = 2024-08-02 05:34:29
 
 [shopee.vn]
 match = -171.4%%
@@ -19,7 +19,7 @@ url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-met
 [tiki.vn]
 match = -221.4%%
 title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465914
+url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
 
 [manthutrang.com]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
 url = https://www.mantubung.com/
 
 [www.lazada.vn]
-match = -242.9%%
-title = màn tự bung hàng cao cấp, nhiều kích thước, gấp gọn tiện ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html
+match = -164.3%%
+title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html?srsltid=AfmBOop3lZPmraGRyIirYoxKIbvDF-xCQ2474kwjlb2ZNTO_n8MEu1-X
 
 [www.mungbaobao.com]
 match = -214.3%%
