--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-02 01:58:46
+lastsearch = 2024-08-02 05:30:46
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -22,14 +22,14 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = 0.0%%
-title = Ruột gối Korea | Shopee Việt Nam
-url = https://shopee.vn/Ruột-gối-Korea-i.33372594.2602291227
+match = -58.8%%
+title = Đôi Ruột Gối Bông Hạt Korea Ép Hơi 50*70cm
+url = https://shopee.vn/🌱-Đôi-Ruột-Gối-Bông-Hạt-Korea-Ép-Hơi-50*70cm-i.125787394.5970171584
 
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorocFGReRjC6kc_c-DhAiZD-VeG_wMwQdRtKXpLq9pKA_uYkTov
+url = https://demxanh.com/ruot-goi.html
 
 [everonkorea.com]
 match = -100.0%%
@@ -49,7 +49,7 @@ url = https://sieuthidemonline.vn/ruot-goi-comfy-45x65-song-hong/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOor03dfx9zWxA_ziV_9jNVMp6wRiwelui_vCFHHjxhdF0SDljOjZ
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html
 
 [www.hotdeal.vn]
 match = -111.8%%
