--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-02 01:24:47
+lastsearch = 2024-08-02 05:32:48
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 5.0%%
-title = Steve Braunstein, MD, PhD
-url = https://profiles.ucsf.edu/steve.braunstein
+match = 11.1%%
+title = Marina Sirota, PhD
+url = https://profiles.ucsf.edu/marina.sirota
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -87,8 +87,8 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -150.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+match = -85.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine
 url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
