CI images update

--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-08-02 03:48:32
+lastsearch = 2024-08-02 06:17:49
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOoo_zMjnSb0Z-IFm9FmDoV_yVa4Y1MJKR5TAZSKvpyqequWvXOJk
 
 [everonthaiha.com]
 match = 35.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 [www.lazada.vn]
 match = -37.5%%
 title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
+url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/?srsltid=AfmBOooHWAtvhU4M7IakHduBbK_UkjxTv-33aJ1DjPuI_WeTsdjTOu37
 
 [www.everonvn.vn]
 match = -20.8%%
