--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-02 01:46:18
+lastsearch = 2024-08-02 06:13:31
 
 [www.mantubung.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -61.1%%
-title = Màn mùng chụp tự bung trẻ em chống muỗi cao cấp
-url = https://shopee.vn/Màn-mùng-chụp-tự-bung-trẻ-em-chống-muỗi-cao-cấp-cho-bé-lớn-trẻ-em-thông-minh-gấp-gọn-để-nôi-và-giường-i.833073428.19530759632
+match = -127.8%%
+title = Màn chụp cho bé - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
