--- a/images/tham-chan-khach-san/config.ini
+++ b/images/tham-chan-khach-san/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-khach-san.html
 lastopen = 2024-06-07 00:37:03
 
 [search]
-lastsearch = 2024-08-02 03:40:52
+lastsearch = 2024-08-02 06:20:56
 
 [www.khanbongcaocap.com.vn]
 match = -78.9%%
@@ -14,7 +14,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -36.8%%
 title = Thảm Chân Khách Sạn Giá Tốt T07/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-chan-khach-san/
+url = https://www.lazada.vn/tag/tham-chan-khach-san/?srsltid=AfmBOorimIsCsepgcJoJlUH63ge8ADQybu9rSLVXudtMAOXaok1nUVCL
 
 [falcon.com.vn]
 match = -105.3%%
@@ -72,8 +72,8 @@ title = Thảm chân Khách sạn
 url = https://khanbongbinhan.com/khan-bong/khan-khach-san/tham-chan-khach-san/tham-chan-khach-san/
 
 [www.sagatexvietnam.com.vn]
-match = -78.9%%
-title = Thảm Chân Khách Sạn 100%% Cotton SAGATEX, Đủ Size, ...
+match = -26.3%%
+title = Thảm Chân Khách Sạn 100%% Cotton SAGATEX ...
 url = https://www.sagatexvietnam.com.vn/product-category/bao-gia-khan-khach-san/tham-chan-khach-san/
 
 [shopee.vn]
