CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-02 04:15:58
+lastsearch = 2024-08-02 06:42:01
 
 [silverwow.net]
 match = -255.6%%
@@ -137,9 +137,9 @@ title = Tees Factory KG-5542671HK Koguma-chan Mini ...
 url = https://www.amazon.com/Factory-KG-5542671HK-Koguma-chan-Character-Basket/dp/B0BW2HGFKD
 
 [www.robe.cz]
-match = -366.7%%
-title = LEDBeam 150™ | Multisource LED Moving Light
-url = https://www.robe.cz/ledbeam-150
+match = -500.0%%
+title = Spiider® | Multisource LED Moving Light | Beam Hybrid ...
+url = https://www.robe.cz/spiider
 
 [faculty.mdanderson.org]
 match = -88.9%%
