--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-02 05:12:10
+lastsearch = 2024-08-02 06:35:48
 
 [www.tiktok.com]
 match = -170.6%%
@@ -68,8 +68,8 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
 match = -217.6%%
-title = The New Annual Army List, Militia List, and Yeomanry Cavalry ...
-url = https://books.google.com/books?id=py0dAQAAIAAJ&pg=PA25&lpg=PA25&dq=man+in+hoa+dep+16&source=bl&ots=wAgRm-ckdw&sig=ACfU3U3y1QqmKYVnVIONZEq64kNQCIf7FQ&hl=en&sa=X&ved=2ahUKEwjDg7iE6NSHAxVBIUQIHQjCLWsQ6AF6BAgZEAM
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=ofANAAAAQAAJ&pg=PA20&lpg=PA20&dq=man+in+hoa+dep+16&source=bl&ots=YUdC3tDk5a&sig=ACfU3U2n76laBZ5Hd3v18SskrlV2pMtIQg&hl=en&sa=X&ved=2ahUKEwj0mY3d-tSHAxXlv4kEHdkHI8cQ6AF6BAgsEAM
 
 [tax.vermont.gov]
 match = -29.4%%
