--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-02 05:20:44
+lastsearch = 2024-08-02 06:29:17
 
 [www.muji.com]
-match = -33.3%%
-title = RUỘT CHĂN
-url = https://www.muji.com/vn/products/section/E30001
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware?srsltid=AfmBOooibtK4dYaIPW-G8Dh3mZh4PdsBLMcj4s9YG-abQ2hjevlUQF1X
+url = https://www.muji.us/collections/tableware
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoooOFLz8QdVaqDiM0-7HczWFoYBGk6TRNBHusY-4lvBbwRHNZwd
+url = https://www.lazada.vn/tag/chan-long-muji/
 
 [sugoimart.com]
 match = -257.1%%
