--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-02 01:23:24
+lastsearch = 2024-08-02 06:39:16
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
-url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
+match = -43.5%%
+title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
+url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = -73.9%%
-title = Chiếu Trúc Cao Bằng Cao Sơn dòng đối mục loại 1 | ‼️Địa ...
-url = https://www.facebook.com/demhong.vn/videos/chiếu-trúc-cao-bằng-cao-sơn-dòng-đối-mục-loại-1/843056673315667/?locale=de_DE
+match = 21.7%%
+title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieutruccaobangcbg/
 
 [www.youtube.com]
 match = -95.7%%
