--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-01 22:45:10
+lastsearch = 2024-08-02 06:45:13
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -17,9 +17,9 @@ title = Ga chống thấm bọc nệm kích thước 2m*2m2 - Shopee
 url = https://shopee.vn/Ga-chống-thấm-bọc-nệm-kích-thước-2m*2m2-i.2157828.1211390382
 
 [www.lazada.vn]
-match = 21.1%%
-title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
-url = https://www.lazada.vn/products/ga-chong-tham-cao-cap-2m-x-2m2-i1990801523.html
+match = -136.8%%
+title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
 
 [demgiare.net]
 match = 5.3%%
@@ -47,9 +47,9 @@ title = Ga giường chống thấm nước hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ga giường chống thấm nước
 
 [goodmamastore.com]
-match = -110.5%%
-title = Ga Chống Thấm Cao Cấp Goodmama- Mẫu Khủng Long ...
-url = https://goodmamastore.com/products/ga-chống-thấm-goodmama-hinh-khung-long
+match = -63.2%%
+title = Ga Chống Thấm Goodmama - Họa tiết Lá Đại
+url = https://goodmamastore.com/products/ga-chống-thấm-goodmama-hinh-hoa-day-xanh
 
 [www.facebook.com]
 match = -121.1%%
@@ -79,7 +79,7 @@ url = https://www.tiktok.com/@funkyglassworks/video/7135866426522537262
 [lovemama.vn]
 match = -131.6%%
 title = Ga chống thấm LoveMama vải Cotton chính hãng, giá tốt 2024
-url = https://lovemama.vn/ga-chong-tham?srsltid=AfmBOoo9Qy7kqJxRCZGqwvu5_ajc7DBERBYAIz1Mj86FdNh4Jzhx0nQt
+url = https://lovemama.vn/ga-chong-tham
 
 [www.shelbynews.com]
 match = -157.9%%
