--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-02 00:57:41
+lastsearch = 2024-08-02 06:39:37
 
 [phana.com.vn]
-match = -90.9%%
-title = MN-G1-Giường 1 tay quay có bô
-url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
+match = 63.6%%
+title = Giường bệnh
+url = https://phana.com.vn/giuong-benh
 
 [tiki.vn]
 match = -190.9%%
@@ -114,7 +114,7 @@ url = https://www.airbnb.com.vn/rooms/929459059736966278
 [freemeteo.cl]
 match = -281.8%%
 title = Weather Xom Giuong (1) - Long term weather forecast
-url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=10&language=english&country=vietnam
+url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=7&language=english&country=vietnam
 
 [www.booking.com]
 match = -327.3%%
@@ -132,9 +132,9 @@ title = Giường nệm xếp gọn kiểu dáng Hàn Quốc SUMIKA 339A, ...
 url = https://sumika.vn/giuong-nem-xep-gon-kieu-dang-han-quoc-sumika-339a-rong-90cm
 
 [thegioigiuonggap.com]
-match = -72.7%%
-title = Giường gấp nhật bản (OTB-MN)
-url = https://thegioigiuonggap.com/giuong-gap-nhat-ban-otb-mn/
+match = -172.7%%
+title = Giường gấp nhập khẩu Nhật Bản (OTB-TRN)
+url = https://thegioigiuonggap.com/giuong-gap-nhat-ban-otb-trn/
 
 [www.igea.com.vn]
 match = -300.0%%
