--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-02 04:25:39
+lastsearch = 2024-08-02 06:36:31
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html?srsltid=AfmBOopIQ8SwSEKxLyEwge77mW-BZeHZI5IRoKVqZ6U4DblSGsV9IbHV
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 5
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
+title = Bộ thảm ghế gỗ 1 dài 2 ngắn
+url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-5
 
 [decoviet.vn]
 match = 22.2%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOoqFPDo5ISZNdAHpSJaY7xc4hfC2ge5heeC89N3pU4C0rxcBQgrw
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 150x190
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
 match = -77.3%%
