--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-02 05:24:54
+lastsearch = 2024-08-02 06:34:25
 
 [everonvn.com.vn]
-match = -55.6%%
-title = Vỏ gối đầu Everon Hotgirl giảm giá 30%%
-url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
 match = -161.1%%
