CI images update

--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-02 05:31:26
+lastsearch = 2024-08-02 08:04:30
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOoroJmynA_UG9PcDM1zAygGtlMYu-M0vCa8dfRJ-K_t0P_rt2Uay
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/?srsltid=AfmBOoql3S9osJw_SeavlvT3Tn61AwTG2YbdyD5P2DkEtWRXOZmlkIWU
 
 [shopee.vn]
-match = -85.7%%
-title = Khăn trải giường, đắp người LOẠI 1 siêu mềm, dày dặn ...
-url = https://shopee.vn/Khăn-trải-giường-đắp-người-LOẠI-1-siêu-mềm-dày-dặn-cho-spa-thẩm-mỹ-viện-kt-90*1m9-nặng-700GR-i.235726001.14824188007
+match = -33.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
 
 [tiki.vn]
 match = -38.1%%
@@ -144,7 +144,7 @@ url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-14/
 [ninhouse.vn]
 match = -42.9%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap
+url = https://ninhouse.vn/collections/drap?srsltid=AfmBOoryP-hL2-BNDG85KnK1DgRKu_jbfZIOFogx4RJTju4KDHPZEjb1
 
 [noithattamviet.net]
 match = -81.0%%
@@ -154,7 +154,7 @@ url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-d
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOopJJ24eguQA-j77RakHQ64CRE03jopKKK8SfhbnIVoJ3Jvbq-g6
 
 [dogohiephien.vn]
 match = -104.8%%
@@ -194,7 +194,7 @@ url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
 [dienmaycholon.com]
 match = -95.2%%
 title = Giường 1.8M NOVARA L14Z-NZ Đen giá rẻ, giao ngay
-url = https://dienmaycholon.com/giuong/giuong-18m-novara-l14znz-den
+url = https://dienmaycholon.com/giuong/giuong-18m-novara-l14znz-den?srsltid=AfmBOooeJ_B2kWV_GxyRd2koYQM1VwHQuc0HsVKCr4mtTIgyK4fpLWQ7
 
 [govi.vn]
 match = 0.0%%
