--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-02 06:15:34
+lastsearch = 2024-08-02 07:59:39
 
 [gobearcats.com]
 match = -142.1%%
@@ -137,9 +137,9 @@ title = Gary Vilke - UCSD Profiles
 url = https://profiles.ucsd.edu/gary.vilke
 
 [som.cuanschutz.edu]
-match = -121.1%%
-title = Rubin Tuder, MD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
+match = -110.5%%
+title = Larry Allen, MD Professor, Medicine-Cardiology
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
