--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-02 01:54:40
+lastsearch = 2024-08-02 08:12:12
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
 [www.diepxuan.com]
 match = -4.8%%
 title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOoqGtMD6V_GF1rell5TorcS6pIQXJr8FkDy268mznYCVAwjVdZsr
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
 match = -57.1%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOop1nBPay-ppD2bEMBQosh6wa2ZQn-nl7nxl6I78zmRM5tX1tEFI
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140?srsltid=AfmBOoqKuhWggqZy5oeQi-Y8Nj9-loCbfKZ6oW1b_ElBZrgUcCX_20L6
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
 
 [changmibedding.com]
 match = -33.3%%
