--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-02 05:33:49
+lastsearch = 2024-08-02 08:12:54
 
 [shopee.vn]
-match = 0.0%%
-title = Set 5 món chiếu điều hòa cao su non kèm chăn thun lạnh ...
-url = https://shopee.vn/Set-5-món-chiếu-điều-hòa-cao-su-non-kèm-chăn-thun-lạnh-chiếu-cao-su-non-trần-tim-chun-cài-4-góc-kèm-chăn-trần-bông-i.217274735.15698688208
+match = 2.9%%
+title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
+url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
 
 [olbedding.com]
 match = 11.8%%
