--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-02 02:25:25
+lastsearch = 2024-08-02 08:09:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -382,8 +382,8 @@ title = Hướng dẫn cách cúng rước ông bà 30 Tết chuẩn, chi tiết
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-cung-ruoc-ong-ba-30-tet-chuan-chi-tiet
 
 [vietnamese.alibaba.com]
-match = -213.3%%
-title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy ...
+match = -226.7%%
+title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy Chỉnh
 url = https://vietnamese.alibaba.com/product-detail/Golf-Club-Set-for-Lady-with-1600364285763.html
 
 [www.highlandscoffee.com.vn]
