--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-02 08:10:03
+lastsearch = 2024-08-02 09:53:28
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@justlikemoms_/video/7327474225000975662?lang=en
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVVLmCXC&sig=ACfU3U3qv45VBf3DfbfFuuQB9X5HYb4vyQ&hl=en&sa=X&ved=2ahUKEwiy8IPmj9WHAxWxrokEHSk6ElcQ6AF6BAgaEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVVLsEXG&sig=ACfU3U0gH18niFiMJNvqNPPKfTesBHRQ-w&hl=en&sa=X&ved=2ahUKEwjVotD0ptWHAxU0kIkEHSymD0gQ6AF6BAgZEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
