--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-02 04:15:14
+lastsearch = 2024-08-02 09:49:46
 
 [www.diepxuan.com]
 match = -72.7%%
@@ -17,9 +17,9 @@ title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
 url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
-match = -18.2%%
-title = COCO Decor - Chăn Ga Gối | Nam Định
-url = https://m.facebook.com/cocodecorchangagoidem/
+match = -100.0%%
+title = Bùng nổ với Ga Gối Coco... - H&T Bedding - Tổng Kho Phân Phối
+url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -13.6%%
-title = Chăn ga gối đệm - CoCo HOUSE | Vinh Yen
-url = https://www.facebook.com/hoa32/
+match = -140.9%%
+title = Chiếu điều hoà (chiếu mây), chiếu tre, chăn-ga-gối 🎀 | 🆕 COCO ...
+url = https://www.facebook.com/groups/151776543537474/posts/-coco-2024️-chiếu-bọc-chun-mới-nhất-của-coco-siêu-bắt-mắt-với-thiết-kế-mới-nhất️/775069884541467/
 
 [foreverbedding.net]
 match = -27.3%%
