--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-02 04:37:10
+lastsearch = 2024-08-02 09:55:58
 
 [www.facebook.com]
 match = -141.2%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = -17.6%%
-title = Philip L. Lorenzi, Ph.D.
-url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
+match = 0.0%%
+title = Hans Lee, MD
+url = https://faculty.mdanderson.org/profiles/hans_lee.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
