--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-02 07:57:11
+lastsearch = 2024-08-02 09:45:02
 
 [www.chieulongdinh.com.vn]
 match = -187.5%%
@@ -162,9 +162,9 @@ title = Ngỡ hết thời, ai dè chiếu Việt... xuất ngoại, ẵm về t
 url = https://tuoitre.vn/ngo-het-thoi-ai-de-chieu-viet-xuat-ngoai-am-ve-trieu-do-20190503214000009.htm
 
 [www.baodongthap.vn]
-match = -225.0%%
-title = Phát huy giá trị văn hóa trên các lĩnh vực của đời sống xã hội
-url = https://www.baodongthap.vn/chinh-tri/phat-huy-gia-tri-van-hoa-tren-cac-linh-vuc-cua-doi-song-xa-hoi-123506.aspx
+match = -175.0%%
+title = Câu chuyện sợi lác sợi bố - Câu chuyện về Làng chiếu ...
+url = https://www.baodongthap.vn/suy-ngam/cau-chuyen-soi-lac-soi-bo-cau-chuyen-ve-lang-chieu-dinh-yen-116614.aspx
 
 [vuihoc.vn]
 match = -187.5%%
