--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-06-19 17:41:04
+lastsearch = 2024-08-02 09:45:23
 
 [demre.com.vn]
-match = 76.0%%
-title = Chiếu nhựa cao cấp 180x200
-url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
+match = 61.1%%
+title = Chiếu nhựa 160x200
+url = https://demre.com.vn/chieu-nhua-160x200
 
 [www.facebook.com]
 match = 42.1%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [kyoryo.vn]
 match = 12.0%%
@@ -32,8 +32,8 @@ title = Chiếu Nhựa đôi Giá Tốt T06/2024
 url = https://www.lazada.vn/tag/chieu-nhua-doi/
 
 [www.diepxuan.com]
-match = 68.0%%
-title = Chiếu nhựa Hà Nội du lịch 160x200
+match = 20.0%%
+title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
@@ -60,4 +60,9 @@ url = https://thegioidemviet.vn/chieu-truc/
 match = -32.0%%
 title = Chiếu Nhựa Hà Nội (1,5m , 1,6m , 1m8 x 2m ,1m8x3m , ...
 url = https://tiki.vn/chieu-nhua-freeship-chieu-nhua-ha-noi-1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m-p131589762.html
+
+[sieuthitretho.vn]
+match = -16.0%%
+title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội
+url = https://sieuthitretho.vn/chieu-truc-hat-thai-binh-cao-cap-160x200-p498.html
 
