--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-06-11 22:32:17
+lastsearch = 2024-08-02 10:01:27
 
 [www.everonvn.vn]
 match = 66.7%%
@@ -12,9 +12,9 @@ title = Ruột gối Everon 45 x 65
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [shopee.vn]
-match = 28.6%%
-title = Ruột gối bông hạt 45x65(1 chiếc)
-url = https://shopee.vn/Ruột-gối-bông-hạt-45x65(1-chiếc)-i.169472495.5409480657
+match = -123.8%%
+title = Ruột gối đầu 45x65 bông hạt trắng tinh khiết,gối nằm êm , ...
+url = https://shopee.vn/Ruột-gối-đầu-45x65-bông-hạt-trắng-tinh-khiết-gối-nằm-êm-mềm-cao-cấp-i.1130196769.24952921894
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -27,9 +27,9 @@ title = Bảng giá mẫu ruột gối 45x65 Elambo ưu đãi và tốt nhất
 url = https://elambo.vn/ruot-goi-45x65-cm/
 
 [suongtuyet.com]
-match = -38.1%%
-title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
-url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
+match = -33.3%%
+title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
+url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
 
 [www.lazada.vn]
 match = -85.7%%
@@ -55,4 +55,9 @@ url = https://songhonghanoi.vn/ruot-goi-dau-song-hong-kich-thuoc-4-5-6-5-cm.html
 match = -47.6%%
 title = Ruột gối đầu Sông Hồng kích thước 45x65 chính hãng
 url = https://demsonghonghanoi.com/ruot-goi-dau-song-hong-kich-thuoc-45x65cm/
+
+[sieuthinguyenkim.com]
+match = -23.8%%
+title = COMBO 2 RUỘT GỐI HOA HÚT CHÂN KHÔNG KT 45x65
+url = https://sieuthinguyenkim.com/combo-2-ruot-goi-hoa-hut-chan-nti112566557.html
 
