--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-02 05:57:23
+lastsearch = 2024-08-02 10:00:24
 
 [www.cms.gov]
 match = 4.5%%
@@ -128,8 +128,8 @@ url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusine
 
 [www.ncbi.nlm.nih.gov]
 match = -118.2%%
-title = Wnt Signaling in Brain Tumors: A Challenging Therapeutic ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10215617/
+title = Protein acylation: mechanisms, biological functions and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9797573/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -617,8 +617,8 @@ title =
 url = https://en.wikipedia.org/wiki/3rd_Battalion,_3rd_Marines
 
 [appropriations.house.gov]
-match = -109.1%%
-title = asRequestedCPFs_FY25_6.20.24 - House Appropriations
+match = -13.6%%
+title = asRequestedCPFs_FY25_6.20.24
 url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
 [www.bpelsg.ca.gov]
@@ -627,9 +627,9 @@ title = CIVIL ENGINEERS LICENSES ISSUED PRIOR TO 1/1/82
 url = https://www.bpelsg.ca.gov/pubs/num_eng_82.pdf
 
 [ftp.wildfire.gov]
-match = -100.0%%
-title = IROverview
-url = https://ftp.wildfire.gov/public/incident_specific_data/calif_n/2020_FEDERAL_Incidents/CA-PNF-001308_PNF_North_Complex/GIS/Products/20200929/OPS_IR_Overview_archE_land_20200929_0530_NorthComplex_CAPNF1308_0929Day.pdf
+match = -22.7%%
+title = Management ActionPoints BobcatFire
+url = https://ftp.wildfire.gov/public/incident_specific_data/calif_s/2020_Incidents/CA-ANF-003687_Bobcat/GIS/Products/20200924/MAP_archE_land_20200924_0023_Bobcat_CAANF3687.pdf
 
 [www.smfd.org]
 match = -113.6%%
