--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-02 08:04:30
+lastsearch = 2024-08-02 09:47:42
 
 [bilystore.vn]
-match = -81.0%%
-title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/?srsltid=AfmBOoql3S9osJw_SeavlvT3Tn61AwTG2YbdyD5P2DkEtWRXOZmlkIWU
+match = -95.2%%
+title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -33.3%%
-title = Thảm lông cừu trải giường, thảm nỉ nhung ...
-url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
+match = -85.7%%
+title = Khăn trải giường, đắp người LOẠI 1 siêu mềm, dày dặn ...
+url = https://shopee.vn/Khăn-trải-giường-đắp-người-LOẠI-1-siêu-mềm-dày-dặn-cho-spa-thẩm-mỹ-viện-kt-90*1m9-nặng-700GR-i.235726001.14824188007
 
 [tiki.vn]
 match = -38.1%%
@@ -124,7 +124,7 @@ url = https://giuongxep.com/
 [www.lazada.vn]
 match = -95.2%%
 title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
-url = https://www.lazada.vn/products/tham-chieu-da-nang-trai-san-trai-giuong-loai-mong-dung-4-mua-tam-trai-nem-mong-i1847998961.html?srsltid=AfmBOorxFrazfz-6xldpjvOCa-FMAg-bB_PLmcya6YRi9WvRN9X9KiiD
+url = https://www.lazada.vn/products/tham-chieu-da-nang-trai-san-trai-giuong-loai-mong-dung-4-mua-tam-trai-nem-mong-i1847998961.html
 
 [bvhungvuong.vn]
 match = -85.7%%
