CI images update

--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-02 09:47:03
+lastsearch = 2024-08-02 10:16:44
 
 [demxanh.com]
 match = -18.5%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
 url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [demre.com.vn]
-match = 66.7%%
-title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
+match = 70.4%%
+title = chiếu trúc hạt đen-trắng 160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-3
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 [shopee.vn]
 match = -18.5%%
 title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
-url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
+url = https://shopee.vn/universal-link/-Mã-SKAMLSC0206-giảm-10-tối-đa-70K-đơn-100K-Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
 
 [tiki.vn]
 match = -7.4%%
@@ -85,4 +85,9 @@ url = http://www.ppzw.com/dh/go.asp?url=http://xn--b1awbidf.xn--p1ai/754819211fe
 match = -103.7%%
 title = العرب مول جدة: Radio portuguesa elvas Купить зимние кроссовки ...
 url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://dwcae.ru/po69Meafe
+
+[chieutrelanlan.com]
+match = 48.1%%
+title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
 
