--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-02 06:19:53
+lastsearch = 2024-08-02 10:14:36
 
 [everon.online]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -12.0%%
-title = Bộ ga chun chần Freesia bốn mùa - Everon
-url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
+match = -24.0%%
+title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
 
 [everonvn.com.vn]
 match = 28.0%%
