--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-02 04:45:06
+lastsearch = 2024-08-02 10:18:26
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -168.8%%
-title = Sài Gòn ĐÊM VẮNG LIÊU XIÊU CẢNH CHỢ 100 NĂM | CHỢ ...
-url = https://www.youtube.com/watch?v=83-kQ4QO4h0
+match = -162.5%%
+title = bqThanh và Ốc Chơi POPPY PLAYTIME PHẦN 3 Rồi Gặp ...
+url = https://www.youtube.com/watch?v=6IG2RX1GjnE
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 31.2%%
-title = Chiếu Lác Trắng Xếp Gọn
-url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
+match = 0.0%%
+title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
+url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
 
 [www.thegioididong.com]
 match = -193.8%%
