CI images update

--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-02 08:12:12
+lastsearch = 2024-08-02 10:33:28
 
 [hanvico.com.vn]
-match = 28.6%%
-title = Bộ ga chun LIVING - LV52
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
+match = 52.6%%
+title = Bộ ga chun chần KS4
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-chan-ks4/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -28.6%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
 match = -19.0%%
@@ -115,4 +115,9 @@ url = https://kenhsinhvien.vn/t/sieu-khuyen-mai-chi-trong-ngay-hom-nay-bo-chan-g
 match = -71.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần mẫu 14
 url = https://thegioidemonline.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-mau-14.html
+
+[runa.vn]
+match = -19.0%%
+title = Bộ Chăn Ga Gối Satin Cotton Màu Burgundy
+url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-burgundy
 
