--- a/images/nem-dreamland-uc-120x190x09/config.ini
+++ b/images/nem-dreamland-uc-120x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-120x190x09.html
 lastopen = 2024-06-06 16:44:51
 
 [search]
-lastsearch = 2024-08-02 09:58:04
+lastsearch = 2024-08-02 10:35:34
 
 [www.diepxuan.com]
 match = 44.4%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOopz2yTkQHR9WYRKlEw0vK-6Ejq7EXddXxFa6u6b7mbzD972i0p_
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [www.michaelmarkowski.com]
 match = -100.0%%
