--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-02 06:37:34
+lastsearch = 2024-08-02 10:36:56
 
 [www.youtube.com]
 match = -420.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = 0.0%%
-title = 
-url = https://www.facebook.com/vuimedu/videos/one-of-the-most-powerful-acupuncture-points-is-yintang-located-on-our-third-eye-/3086873844866489/
+match = -370.0%%
+title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above ...
+url = https://www.facebook.com/photo.php?fbid=1547299565411654&id=393176087490680&set=a.395996077208681
 
 [books.google.com]
 match = -460.0%%
