--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-02 03:37:02
+lastsearch = 2024-08-02 10:31:25
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -82,9 +82,9 @@ title = Ruột gối Everon Standard ( loại dày )
 url = http://www.changagoidemeveron.vn/3/everon/ruot-goi-everon-day.html
 
 [tiki.vn]
-match = -200.0%%
-title = Ruột gối giá tốt, bền đẹp, giao siêu tốc Tháng 7, 2024
-url = https://tiki.vn/ruot-goi/c23366
+match = -42.9%%
+title = Gối, ruột gối, vỏ gối bán chạy
+url = https://tiki.vn/ruot-goi-ruot-chan/c6724
 
 [ru9.vn]
 match = -171.4%%
