CI images update

--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-08-02 05:57:44
+lastsearch = 2024-08-02 10:45:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -505,4 +505,9 @@ url = https://katinat.vn/cua-hang-2/
 match = 6.7%%
 title = Danh sách ATM/ĐGD
 url = https://www.sacombank.com.vn/trang-chu/danh-sach-atm-dgd.html
+
+[pgboard.eu]
+match = -26.7%%
+title = khu vui chơi gulfport fl
+url = https://pgboard.eu/mpsy/vi/khu-vui-chơi-gulfport-fl
 
