--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-02 10:14:59
+lastsearch = 2024-08-02 10:58:25
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -102,9 +102,9 @@ title = Những điều cấm kỵ ở Thái Lan TUYỆT ĐỐI mà bạn cần 
 url = https://www.kosshop.vn/t/nhung-dieu-cam-ky-o-thai-lan.html
 
 [m.facebook.com]
-match = -51.9%%
-title = Khi được hỏi về tình hình mang thai lần... - Hóng Hớt ...
-url = https://m.facebook.com/story.php/?story_fbid=886045900213984&id=100064257476549
+match = 9.1%%
+title = Theanh28 Entertainment
+url = https://m.facebook.com/Theanh28/photos/có-thờ-có-thiêng-có-kiêng-có-lành-1-các-tuổi-phải-cẩn-thận-kiêng-kị-trong-tháng-/805050118476759/
 
 [vietbao.com]
 match = -59.3%%
@@ -285,4 +285,9 @@ url = https://vn.loccitane.com/collections/cham-soc-da-tay-va-da-chan
 match = -29.6%%
 title = Xử lý ô nhiễm môi trường từ các nguồn rác thải
 url = https://www.baobaclieu.vn/doi-song-xa-hoi/xu-ly-o-nhiem-moi-truong-tu-cac-nguon-rac-thai-van-thieu-cac-giai-phap-huu-hieu-96044.html
+
+[vntravel.org.vn]
+match = -74.1%%
+title = Thái Lan tập trung thu hút nhóm khách ở dài ngày, chuyên gia ...
+url = https://vntravel.org.vn/thai-lan-tap-trung-thu-hut-nhom-khach-o-dai-ngay-chuyen-gia-du-lich-danh-gia-chat-luong-quan-trong-hon-so-luong-a5137.html
 
