--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-02 06:49:39
+lastsearch = 2024-08-02 10:54:37
 
 [tiki.vn]
 match = 16.0%%
 title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
-url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
+url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=58961412
 
 [www.tiktok.com]
-match = -80.0%%
-title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
-url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
+match = 4.0%%
+title = Thời Gian Chiếu Phim Mai Ở Taiwan
+url = https://www.tiktok.com/discover/Thời-gian-chiếu-phim-mai-ở-taiwan
 
 [shopee.vn]
 match = -28.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -56.0%%
-title = "SỐC" VỚI 12 SỰ THẬT THÚ VỊ VỀ ĐÀI LOAN | Cách Trung ...
-url = https://www.youtube.com/watch?v=DWqUd9AkeCo
+match = -76.0%%
+title = FULL HD | Việt Nam - Đài Loan | Trung phong 15 tuổi khuynh ...
+url = https://www.youtube.com/watch?v=Oa-TP4v6YnQ
 
 [znews.vn]
 match = -40.0%%
@@ -77,9 +77,9 @@ title = 12 du học sinh Việt Nam bị lừa bán dâm ở Đài Loan
 url = https://znews.vn/12-du-hoc-sinh-viet-nam-bi-lua-ban-dam-o-dai-loan-post1387175.html
 
 [m.facebook.com]
-match = -16.0%%
-title = NGƯỜI YÊU HÀ NỘI | ÔNG ẤY, CHÍNH LÀ BỐ TÔI
-url = https://m.facebook.com/groups/767437477029518/posts/1967403347032919/
+match = -64.0%%
+title = CGV Cinemas Vietnam - Sau 4 ngày công chiếu tại Đài ...
+url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [tuoitre.vn]
 match = -12.0%%
