--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-02 10:34:10
+lastsearch = 2024-08-02 10:58:06
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -285.7%%
+title = BOVET 1822. Behind the Scenes with Pascal & Keith. 95%% in ...
+url = https://www.youtube.com/watch?v=T1H4IQneHZE
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -365,4 +365,9 @@ url = https://antoursvietnam.com/xanh-sm-taxi-app-vietnam-guide/
 match = -50.0%%
 title = Amouage Perfumes And Colognes
 url = https://www.fragrantica.com/designers/Amouage.html
+
+[www.chicago-theater.com]
+match = 0.0%%
+title = 
+url = https://www.chicago-theater.com/theaters/briar-street-theater/blue-man-group.php
 
