--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-01 23:59:45
+lastsearch = 2024-08-02 10:56:44
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgnJIrp8&sig=ACfU3U1BSZtQXu0CbLnfSGYmvkRyLFxxQQ&hl=en&sa=X&ved=2ahUKEwinoIGXjNSHAxULGTQIHSTYBgQQ6AF6BAglEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgnOEli9&sig=ACfU3U1eFhag4E_h5jVt8jSKagxJUof6JQ&hl=en&sa=X&ved=2ahUKEwiz68SGtdWHAxWgMDQIHZd3KawQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
