--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-02 09:48:03
+lastsearch = 2024-08-02 10:55:20
 
 [www.facebook.com]
 match = -45.0%%
@@ -69,7 +69,7 @@ url = https://vuanem.com/brand/pyeoda
 [changagoidemphuongbac.com]
 match = -15.0%%
 title = Đệm cao su tổng hợp Dora Pyeoda
-url = https://changagoidemphuongbac.com/dem-cao-su-tong-hop-dora-pyeoda/
+url = https://changagoidemphuongbac.com/dem-cao-su-tong-hop-dora-pyeoda?yith_wcan=1&product_cat=ga-tra-giuong
 
 [changagoidemtamhao.com]
 match = -10.0%%
