--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-02 09:46:25
+lastsearch = 2024-08-02 11:00:10
 
 [tuananh.vn]
-match = 8.0%%
-title = Đệm bông ép 3 mảnh Korea Kaki
-url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOopUQ3hrprYESf02s5OUhRLoLnYiPnFSeXnUd3U1NZJQrzIeJ5jR
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Đệm-lò-xo-túi-kore-Tuấn-Anh-_180x200x24cm_hành-c
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOooOczJ_QUldtiseSK2O1IOlVf8pmXtznQWHRRhr9B9g7TH_a534
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [entershopping.vn]
 match = -36.0%%
