CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-02 09:55:58
+lastsearch = 2024-08-02 11:27:15
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -152.9%%
-title = Wen Dan Tang: A Potential Jing Fang Decoction for ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8955743/
+match = -176.5%%
+title = Traditional Chinese herbal medicine for vascular dementia
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6516869/
 
 [books.google.com]
 match = -7.7%%
@@ -295,4 +295,9 @@ url = https://www.ars.usda.gov/ARSuserfiles/oc/np/commercialstorage/commercialst
 match = -147.1%%
 title = Rutgers Institute for Health - Rutgers University
 url = https://ifh.rutgers.edu/
+
+[www.sciencedirect.com]
+match = -135.3%%
+title = Chronic methamphetamine-induced neurodegeneration
+url = https://www.sciencedirect.com/science/article/abs/pii/S0028390821003725
 
