--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-02 03:25:03
+lastsearch = 2024-08-02 11:30:15
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 [demxanh.com]
 match = 29.8%%
 title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOooaYUoGN9q2JH5iLIef6gAhNS9bEbqU2yCJjccVHrhyndm4HkFA
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -37,9 +37,9 @@ title = Đệm lò xo King Koil Cloud Firm
 url = https://sieuthidemhanquoc.com.vn/dem-lo-xo-king-koil-cloud-firm-1470
 
 [suongtuyet.com]
-match = -7.7%%
-title = Nệm Lò Xo Everon - Đà Nẵng
-url = https://suongtuyet.com/nem-lo-xo-everon
+match = 57.8%%
+title = Nệm Lò Xo Everon King Koil Cloud Firm - 27 cm
+url = https://suongtuyet.com/nem-lo-xo-everon-king-koil-cloud-firm-27-cm
 
 [www.everonqb.com]
 match = 57.4%%
@@ -47,9 +47,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.diepxuan.com]
-match = 31.1%%
-title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
-url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html?srsltid=AfmBOopo-eHD82bpFJHNnH4jf3j8AWtVbjPcPrWsHx_H7uRiDAhzxPnI
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
 match = 31.9%%
@@ -72,7 +72,7 @@ title = kingkoil spray cushion (america) - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/dem-lo-xo-kingkoil-my/
 
 [everonhanquoc.vn]
-match = -48.0%%
-title = Các Loại Đệm Lò Xo Everon
-url = https://everonhanquoc.vn/1030/dem-lo-xo-everon
+match = 33.3%%
+title = Đệm Lò Xo King Koil Công Nghệ Hàng Đầu Tại Mỹ
+url = https://everonhanquoc.vn/1035/dem-lo-xo-king-koil
 
