--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-02 07:00:08
+lastsearch = 2024-08-02 11:32:17
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,19 +12,19 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -21.7%%
-title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html
+match = -60.9%%
+title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [chieutrucsaigon.com]
 match = 43.5%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+title = CHIẾU TRÚC THANH CAO BẰNG 1M6X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m6x2m.html
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu trúc Cao Bằng Cao Sơn dòng đối mục loại 1 chính ...
-url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-Cao-Sơn-dòng-đối-mục-loại-1-chính-hãng-đủ-kích-thước-i.334752746.9233812040
+match = 17.4%%
+title = Chiếu cao bằng Việt Nam 1.2m x 1.95
+url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
 
 [www.lazada.vn]
 match = 21.7%%
@@ -115,4 +115,9 @@ url = https://www.youtube.com/watch?v=WuuRBc8R_-0
 match = -87.0%%
 title = 1 mieng dat hinh thang co chieu cao bang 2/3 do dai day ...
 url = https://olm.vn/cau-hoi/1-mieng-dat-hinh-thang-co-chieu-cao-bang-23-do-dai-day-be-do-dai-day-be-bang-45-do-dai-day-lon-a-hay-tinh-dien-tich-mieng-dat-hinh-thang-do-biet-do.101880414393
+
+[www.csps.vn]
+match = -65.2%%
+title = Bàn điều chỉnh chiều cao bằng điện CSPS 117cm màu trắng
+url = https://www.csps.vn/products/ban-dieu-chinh-chieu-cao-bang-dien-csps-117cm
 
