--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-02 05:46:21
+lastsearch = 2024-08-02 11:26:31
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,9 +12,9 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 29.0%%
-title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
+match = 32.3%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
 match = -12.9%%
@@ -22,9 +22,9 @@ title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [tiki.vn]
-match = -6.5%%
-title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 8, 2024
-url = https://tiki.vn/search?q=chiếu trúc
+match = -19.4%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [demxanh.com]
 match = -9.7%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 9.7%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 - ct112
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-32003669.html?source_block_id=feed&source_page_id=product_detail&source_info=pwa_60_1690329600448_6a818510-b1f7-48b8-b49f-9ce3d3238d35_-1_ishyperproductdetail0_0_41_26_-1
+match = -12.9%%
+title = Chiếu Trúc 1M Siêu Chất, Giá Ưu Đãi, Khuyến Mãi Hấp Dẫn
+url = https://www.sendo.vn/chieu-truc-1m.htm
 
 [www.lazada.vn]
 match = 16.1%%
