--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-02 08:11:08
+lastsearch = 2024-08-02 11:19:06
 
 [burningman.org]
 match = 0.0%%
@@ -147,9 +147,9 @@ title = U.S. Food and Drug Administration
 url = https://www.fda.gov/
 
 [boardofwatersupply.com]
-match = -166.7%%
-title = Trang web mua vÃ© bÃ³ng Ä'Ã¡ nÆ°á»›c ngoÃ i
-url = https://boardofwatersupply.com/appKUUSr/79405.csv
+match = -73.3%%
+title = Bongdatructuyen 24 7 táºp 1 trang 118
+url = https://boardofwatersupply.com/appGgWZQDXVkf
 
 [steamcommunity.com]
 match = -53.3%%
