--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-02 09:45:45
+lastsearch = 2024-08-02 11:25:11
 
 [www.gov.uk]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -186.7%%
-title = Forgiveness & Pride | Trinity Online | July 28, 2024
-url = https://www.youtube.com/watch?v=Hoet9ccfBr8
+match = -193.3%%
+title = Adamantium Confirmed: We’re Closer Than Ever To The ...
+url = https://www.youtube.com/watch?v=zXPe48nbv08
 
 [vietjack.com]
 match = -106.7%%
@@ -1140,4 +1140,14 @@ url = https://www.betterhealth.vic.gov.au/health/conditionsandtreatments/warts
 match = -93.3%%
 title = Children's Museum & Theatre of Maine
 url = https://www.kitetails.org/
+
+[business.udemy.com]
+match = -153.3%%
+title = Udemy Business: Home - Online Learning Platform
+url = https://business.udemy.com/
+
+[support.apple.com]
+match = -40.0%%
+title = Using Dual SIM with an eSIM
+url = https://support.apple.com/en-us/109317
 
